2007-01-10  Ulrich Drepper  <drepper@redhat.com>

	* io/fts.c: Make sure fts_cur is always valid after return from
	fts_read.
	Patch by Miloslav Trmac <mitr@redhat.com>.

2007-01-03  Jakub Jelinek  <jakub@redhat.com>

	* posix/execvp.c: Include alloca.h.
	(allocate_scripts_argv): Renamed to...
	(scripts_argv): ... this.  Don't allocate buffer here nor count
	arguments.
	(execvp): Use alloca if possible.
	* posix/Makefile: Add rules to build and run tst-vfork3 test.
	* posix/tst-vfork3.c: New test.

2007-01-05  Steven Munroe  <sjmunroe@us.ibm.com>

	* stdlib/tst-makecontext.c: Include errno.h.  Change main()
	to do_test().  Define TEST_FUNCTION. Include test-skeleton.c.
	(do_test): Check errno and exit(0) if ENOSYS.

2007-01-11  Jakub Jelinek  <jakub@redhat.com>

	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Fix handling of multi-byte
	thousands separators.
	* stdlib/Makefile: Add rules to build and run tst-strtod4.
	* stdlib/tst-strtod4.c: New test.

	[BZ #3855]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): 0x. not followed by
	hexadecimal digit should accept just the initial 0.
	* stdlib/tst-strtod2.c (tests): New variable.
	(do_test): Run several tests rather than just one.

2007-01-03  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/Makefile (tst-strtod3-ENV): Define.

2006-12-11  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Parse thousand
	separators also if no non-zero digits found.
	* stdlib/Makefile (tests): Add tst-strtod3.

2006-12-09  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3664]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Fix test to recognize
	empty parsed strings.
	* stdlib/Makefile (tests): Add tst-strtod2.
	* stdlib/tst-strtod2.c: New file.

	[BZ #3673]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Fix exp_limit
	computation.
	* stdlib/Makefile (tests): Add tst-atof2.
	* stdlib/tst-atof2.c: New file.

	[BZ #3674]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Adjust exponent value