@@ -1,3 +1,9 @@
+2007-01-12  Gwenole Beauchesne  <gbeauchesne@mandriva.com>
+
+	[BZ #3884]
+	* locales/sl_SI: Slovenia joined the Euro zone.
+	Fix negative number format.
+
 2006-11-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* locales/mai_IN: New file.
